clusters/svc.ez.soeren.cloud/grafana/namespace.yaml
---
kind: Namespace
apiVersion: v1
metadata:
  name: grafana
  labels:
    name: grafana
    pod-security.kubernetes.io/enforce: baseline
    pod-security.kubernetes.io/enforce-version: latest
