clusters/svc.ez.soeren.cloud/grafana/virtualservice.yaml
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: grafana
spec:
  hosts:
    - grafana.svc.ez.soeren.cloud
  gateways:
    - istio-system/gateway
  http:
    - match:
        - uri:
            prefix: /
      route:
        - destination:
            host: grafana.grafana.svc.cluster.local
            port:
              number: 80
